[package]
name = "human-marketplace"
version = "1.0.0"
authors = [
  "Shane Vitarana <s@noreply.publicawesome.com>",
  "Jake Hartnell <jake@publicawesome.com>",
]
edition = "2018"
repository = "https://github.com/public-awesome/marketplace"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw721 = "0.13.4"
cw721-base = { path = "../../packages/cw721-base" }
schemars = "0.8.10"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
cw-utils = "0.13.4"
cw-controllers = "0.14.0"
semver = "1"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = { version = "0.13.4" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
